Split README into overview plus docs/features.md and docs/limitations.md
The README had grown to a 13-item Features section, a 5-item
"Not yet implemented" list, an inline Hybrid search essay, and
a 17-item Known limitations block. The bulk was reference
material a first-time reader does not need to see up front, so
the file drifted out of sync with the code (multi-fields,
Utf8 primary keys, PK-less _id synthesis, and the umbrella
issue #37 shard-path fall-throughs never made it in).

This commit reshapes the top-level docs so the README is a
short landing page and the reference material lives under docs
grouped by concern.

* README trimmed to overview, status, quick-glance value bullets,
  requirements, build, "try it" pointer, documentation index,
  feedback, and license. About 60 lines.
* docs/features.md is new. Sections: attach / namespace surface,
  query shapes (full-text, vector, GET by PK, hit shape,
  multi-fields), aggregations, follow-forward and version
  pinning, hybrid search, storage options, mapping type
  coverage, and native memory bounds. Includes the pieces the
  old README never covered: multi_fields on attach body,
  Utf8 primary key with SQL-quoted lookup, PK-less _id
  synthesis (<fragment>-<offset>), max_score aggregated from
  paged hits, and track_scores:true honoured with sort.
* docs/limitations.md is new. Sections: query shapes routed to
  the shard path (with the full #37 fall-through list including
  min_score / terminate_after / track_total_hits / stored_fields
  / docvalue_fields / explain), stock match on lance_text,
  vector search caveats, shard model and concurrency (adds
  the PUT /{index} with index.lance.table 400 reject),
  primary key semantics, freshness, storage and credentials,
  mapping coverage gaps, index lifecycle, reader memory
  profile, version pinning, and RFC future work.
* docs/getting-started.md gains two navigation links at the end.
* CHANGELOG's Unreleased entry now records the multi_fields
  attach clause